k8s/cosmos_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-reactive-cosmos
  labels:
    app: cosmos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cosmos
  template:
    metadata:
      labels:
        app: cosmos
    spec:
      containers:
        - name: spring-reactive-cosmos
          image: aksintegrations01.azurecr.io/spring-reactive-cosmos:0.0.3-SNAPSHOT
          ports:
            - containerPort: 8760
