k8s/external_lb_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: redis
spec:
  type: LoadBalancer
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
  selector:
    app: redis
